[workspace]
members = [
	"contracts/dao-dao-core",
	"contracts/proposal/*",
	"contracts/pre-propose/*",
	"contracts/staking/*",
	"contracts/voting/*",
	"packages/*",
	"test-contracts/*",
	"ci/*",
	"contracts/external/*"
	]
exclude = ["ci/configs/"]

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/DA0-DA0/dao-contracts"
version = "2.2.0"

[profile.release.package.stake-cw20-external-rewards]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
# Please do not disable these. Doing so will cause overflow checks in
# all workspace members to stop working. Overflows should be errors.
overflow-checks = true

[workspace.dependencies]
anyhow = { version = "1.0.51"}
cosmwasm-schema = { version = "1.1" }
cosmwasm-std = { version = "1.1", features = ["ibc3"] }
cosmwasm-storage = { version = "1.1" }
cw-controllers = "0.16"
cw-multi-test = { version = "0.16" }
cw-storage-plus = { version = "1.1" }
cw-utils = "0.16"
cw2 = "0.16"
cw20 = "0.16"
cw20-base = "0.16"
cw3 = "0.16"
cw4 = "0.16"
cw4-group = "0.16"
cw721 = "0.16"
cw721-base = "0.16"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"]}
syn = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0.30" }
wynd-utils = "0.4.1"

# One commit ahead of version 0.3.0. Allows initialization with an
# optional owner.
cw-ownable = "0.5.0"

cw-admin-factory = { path = "./contracts/external/cw-admin-factory", version = "2.2.0" }
cw-denom = { path = "./packages/cw-denom", version = "2.2.0" }
cw-hooks = { path = "./packages/cw-hooks", version = "2.2.0" }
cw-wormhole = { path = "./packages/cw-wormhole", version = "2.2.0" }
cw-paginate-storage = { path = "./packages/cw-paginate-storage", version = "2.2.0" }
cw-payroll-factory = { path = "./contracts/external/cw-payroll-factory", version = "2.2.0" }
cw-vesting = { path = "./contracts/external/cw-vesting", version = "2.2.0" }
cw20-stake = { path = "./contracts/staking/cw20-stake", version = "2.2.0" }
cw-stake-tracker = { path = "./packages/cw-stake-tracker", version = "2.2.0" }
cw721-controllers = { path = "./packages/cw721-controllers", version = "2.2.0" }
dao-dao-core = { path = "./contracts/dao-dao-core", version = "2.2.0" }
dao-interface = { path = "./packages/dao-interface", version = "2.2.0" }
dao-dao-macros = { path = "./packages/dao-dao-macros", version = "2.2.0" }
dao-pre-propose-approval-single = { path = "./contracts/pre-propose/dao-pre-propose-approval-single", version = "2.2.0" }
dao-pre-propose-approver = { path = "./contracts/pre-propose/dao-pre-propose-approver", version = "2.2.0" }
dao-pre-propose-base = { path = "./packages/dao-pre-propose-base", version = "2.2.0" }
dao-pre-propose-multiple = { path = "./contracts/pre-propose/dao-pre-propose-multiple", version = "2.2.0" }
dao-pre-propose-single = { path = "./contracts/pre-propose/dao-pre-propose-single", version = "2.2.0" }
dao-proposal-condorcet = { path = "./contracts/proposal/dao-proposal-condorcet", version = "2.2.0" }
dao-proposal-hooks = { path = "./packages/dao-proposal-hooks", version = "2.2.0" }
dao-proposal-multiple = { path = "./contracts/proposal/dao-proposal-multiple", version = "2.2.0" }
dao-proposal-single = { path = "./contracts/proposal/dao-proposal-single", version = "2.2.0" }
dao-proposal-sudo = { path = "./test-contracts/dao-proposal-sudo", version = "2.2.0" }
dao-testing = { path = "./packages/dao-testing", version = "2.2.0" }
dao-vote-hooks = { path = "./packages/dao-vote-hooks", version = "2.2.0" }
dao-voting = { path = "./packages/dao-voting", version = "2.2.0" }
dao-voting-cw20-balance = { path = "./test-contracts/dao-voting-cw20-balance", version = "2.2.0" }
dao-voting-cw20-staked = { path = "./contracts/voting/dao-voting-cw20-staked", version = "2.2.0" }
dao-voting-cw4 = { path = "./contracts/voting/dao-voting-cw4", version = "2.2.0" }
dao-voting-cw721-staked = { path = "./contracts/voting/dao-voting-cw721-staked", version = "2.2.0" }
dao-voting-native-staked = { path = "./contracts/voting/dao-voting-native-staked", version = "2.2.0" }

# v1 dependencies. used for state migrations.
cw-core-v1 = { package = "cw-core", version = "0.1.0" }
cw-proposal-single-v1 = { package = "cw-proposal-single", version = "0.1.0" }
cw-utils-v1 = {package = "cw-utils", version = "0.13"}
cw20-stake-external-rewards-v1 = { package = "stake-cw20-external-rewards", version = "0.2.6" }
cw20-stake-reward-distributor-v1 = { package = "stake-cw20-reward-distributor", version = "0.1.0" }
cw20-stake-v1 = { package = "cw20-stake", version = "0.2.6" }
cw20-staked-balance-voting-v1 = { package = "cw20-staked-balance-voting", version = "0.1.0" }
cw4-voting-v1 = { package = "cw4-voting", version = "0.1.0" }
voting-v1 = { package = "dao-voting", version = "0.1.0" }
stake-cw20-v03 = { package = "stake-cw20", version = "0.2.6" }
