[package]
name = "bootstrap-env"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/DA0-DA0/dao-contracts"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cosm-orc = { version = "3.0" }
cw20 = { workspace = true }
cw-utils = { workspace = true }
cosmwasm-std = { workspace = true, features = ["ibc3"] }
cw-admin-factory = { workspace = true }
cwd-core = { workspace = true }
cw20-stake = { workspace = true }
cwd-voting-cw20-staked = { workspace = true }
cwd-proposal-single = { workspace = true }
cwd-pre-propose-single = { workspace = true }
cwd-interface = { workspace = true }
cwd-voting = { workspace = true }

anyhow = { workspace = true }
env_logger = "0.9.0"
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
