[package]
name = "bootstrap-env"
version = "0.2.0"
edition = { workspace = true }
repository = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cosm-orc = { workspace = true }
cw20 = { workspace = true }
cw-utils = { workspace = true }
cosmwasm-std = { workspace = true, features = ["ibc3"] }
cw-admin-factory = { workspace = true }
dao-dao-core = { workspace = true }
cw20-stake = { workspace = true }
dao-voting-cw20-staked = { workspace = true }
dao-proposal-single = { workspace = true }
dao-pre-propose-single = { workspace = true }
dao-interface = { workspace = true }
dao-voting = { workspace = true }

anyhow = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
