[package]
name = "gas-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
cosm-orc = { version = "0.5.1" }
cw-core = { version = "0.1.0", path = "../../contracts/cw-core" }
cw20-stake = { version = "*", path = "../../contracts/cw20-stake" }
cw20-staked-balance-voting = { version = "0.1.0", path = "../../contracts/cw20-staked-balance-voting" }
cw-proposal-single = { version = "0.1.0", path = "../../contracts/cw-proposal-single" }
voting = { version = "*", path = "../../packages/voting" }

anyhow = { version = "1.0.51"}
cw20 = "0.13"
cw20-base = "0.13"
cw-utils = "0.13"
cosmwasm-std = { version = "1.0.0", features = ["ibc3"] }
env_logger = "0.9.0"
serde_json = "1.0"