[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# This crate depends on rand. These are not featured in
# wasm builds of cosmwasm. Despite this crate only being used as a dev
# dependency, because it is part of the workspace it will always be
# compiled. There is no good way to remove a member from a workspace
# conditionally. As such, we don't compile anything here if we're
# targeting wasm.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cosm-orc = { version = "3.0" }
cw20 = { workspace = true }
cw20-base = { workspace = true }
cw721-base = { workspace = true }
cw721 = { workspace = true }
cw-utils = { workspace = true }
cosmwasm-std = { workspace = true, features = ["ibc3"] }

cwd-core = { workspace = true }
cw20-stake = { workspace = true }
cwd-voting-cw20-staked = { workspace = true }
cwd-voting-cw721-staked = { workspace = true }
cwd-proposal-single = { workspace = true }
cwd-pre-propose-single = { workspace = true }
cwd-interface = { workspace = true }
cwd-voting = { workspace = true }

assert_matches = "1.5"
anyhow = { version = "1.0.51"}
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
once_cell = "1.13.0"
env_logger = "0.9.0"
test-context = "0.1.4"
rand = { workspace = true }
