[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

# This crate depends on rand. These are not features in
# wasm builds of cosmwasm. Despite this crate only being used as a dev
# dependency, because it is part of the workspace it will always be
# compiled. There is no good way to remove a member from a workspace
# conditionally. As such, we don't compile anything here if we're
# targeting wasm.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cosm-orc = { version = "1.3.2" }
cw20 = { workspace = true }
cw20-base = { workspace = true }
cw-utils = { workspace = true }
cosmwasm-std = { workspace = true }
cw-dao-core = { workspace = true }
cw20-stake = { workspace = true }
cw-dao-voting-staked-cw20 = { workspace = true }
cw-dao-proposal-single = { workspace = true }
cw-dao-core-interface = { workspace = true }
cw-dao-voting = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
assert_matches = "1.5"
serde_json = "1.0"
once_cell = "1.13.0"
env_logger = "0.9.0"
test-context = "0.1.4"
ctor = "0.1.22"
rand = "0.8.5"
