[package]
name = "dao-dao-token-factory-integration-tests"
version = "0.1.0"
edition = { workspace = true }

cosmwasm-std = { workspace = true, features = ["ibc3", "cosmwasm_1_1"] }
cw-utils = { workspace = true }
osmosis-test-tube = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
env_logger = { workspace = true }
