[package]
name = "cw-core"
version = "0.1.0"
authors = ["Zeke Medley <zekemedley@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit
  # them for convenience but they should not be part of the source
  # code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/workspace-optimizer:0.12.6
"""

[dependencies]
cosmwasm-std = { version = "1.0.0", features = ["ibc3"] }
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = "0.13"
cw2 = "0.13"
cw-utils = "0.13"
cw20 = "0.13"
cw721 = "0.13"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
cw-core-interface = { version = "0.1.0", path = "../../packages/cw-core-interface" }
cw-core-macros = { version = "0.1.0", path = "../../packages/cw-core-macros" }
cw-paginate = { version = "0.1.0", path = "../../packages/cw-paginate" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
# TODO: We are using the main branch of cw-multi-test until the next release, because we need recent stargate parsing fixes
cw-multi-test = { git = "https://github.com/CosmWasm/cw-plus", branch = "main",  features = ["stargate"] }
cw20-base = "0.13"
cw721-base = "0.13"
cw-proposal-sudo = { version = "0.1.0", path = "../../debug/cw-proposal-sudo"}
cw20-balance-voting = { version = "0.1.0", path = "../../debug/cw20-balance-voting"}
