[package]
name = "cw-core"
version = "0.2.0"
authors = ["Zeke Medley <zekemedley@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0", features = ["ibc3"] }
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = "0.13"
cw2 = "0.13"
cw-utils = "0.13"
cw20 = "0.13"
cw721 = "0.13"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
cw-core-interface = { path = "../../packages/cw-core-interface" }
cw-core-macros = { path = "../../packages/cw-core-macros" }
cw-paginate = { path = "../../packages/cw-paginate" }
cw-core-v1 = { package = "cw-core", version = "0.1.0", git = "https://github.com/DA0-DA0/dao-contracts.git", tag = "v1.0.0" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = { version = "0.14", features = ["stargate"] }
cw20-base = "0.13"
cw721-base = "0.13"
cw-proposal-sudo = { path = "../../debug/cw-proposal-sudo"}
cw20-balance-voting = { path = "../../debug/cw20-balance-voting"}
