[package]
name = "cw-dao-core"
authors = ["ekez <ekez@withoutdoing.com>"]
description = "The core module of DAO DAO DAOs."
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw-utils = { workspace = true }
cw20 = { workspace = true }
cw721 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cw-dao-core-interface = { workspace = true }
cw-dao-core-macros = { workspace = true }
cw-paginate = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
# TODO: We are using the main branch of cw-multi-test until the next
# release, because we need recent stargate parsing fixes.
#
# Fix when upgrading to 0.14.
cw-multi-test = { git = "https://github.com/CosmWasm/cw-plus", branch = "main",  features = ["stargate"] }
cw20-base = { workspace = true }
cw721-base = { workspace = true }
cw-dao-proposal-sudo = { workspace = true }
cw-dao-voting-cw20-balance = { workspace = true }
